[package]
name = "box-drawing-table"
version = "0.1.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2018"
license = "MIT"
keyword = ["unicode", "pretty-print", "table"]
categories = ["command-line-utilities", "visualization"]
repository = "https://github.com/algon-320/box-drawing-table"
readme = "README.md"

[dependencies]
unicode-width = "0.1.8"
textwrap = "0.13.2"
ansi_term = "0.12.1"
